Revert "Bug 1386 - make sure site schemes use different visited/unvisited link colors"
Color contrast is too low on errorbar

This reverts commit eaadab8fabc4d654ee812d8131f1e209d0f6b31c.

--- a/htdocs/stc/tropo/tropo-purple.css
+++ b/htdocs/stc/tropo/tropo-purple.css
@@ -49,12 +49,12 @@ a:link,
     color: #3a155a;
 }
 a:visited {
-    color: #5e3da6;
+    color: #000000;
 }
 a:hover,
 a:active,
 .link:hover {
-    color: #7836cb;
+    color: #5e3da6;
 }
 #canvas {
     background-color: #f7f7f7;
